<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:paddingTop="5dp"
    android:paddingBottom="5dp"
    android:background="@drawable/circle"
    tools:context=".HomeActivity">

    <TextView
        android:text="@string/welcome_text"
        android:layout_width="wrap_content"
        android:layout_centerVertical="true"
        android:padding="10dp"
        android:layout_above="@+id/description"
        android:textSize="60sp"
        android:textColor="@color/home_page_text_title_color"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/description_text"
        android:id="@+id/description"
        android:padding="15dp"
        android:layout_width="wrap_content"
        android:textSize="20sp"
        android:textAlignment="center"
        android:fontFamily="sans-serif-medium"
        android:layout_centerVertical="true"
        android:textColor="@color/home_page_text_description_color"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/learn_button"
            android:text="@string/learn_button_text"
            android:layout_alignParentBottom="true"
            android:layout_weight="1"
            android:layout_marginRight="5dp"
            android:background="@color/button_background_color"
            android:textColor="@color/button_text_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/references_button"
            android:text="@string/references_button_text"
            android:layout_alignRight="@id/learn_button"
            android:layout_alignParentBottom="true"
            android:layout_weight="1"
            android:background="@color/button_background_color"
            android:textColor="@color/button_text_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</RelativeLayout>