<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="johnsoaa.awesometeams.com.scrumify.BasicConceptsActivity">

    <TextView
        android:id="@+id/overview_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/overview_text_label"
        android:textAllCaps="true"
        android:textColor="@color/home_page_text_title_color"
        android:textSize="30dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:textStyle="italic"
        android:layout_marginTop="37dp"
        android:background="@color/label_background_color"
        android:text="@string/purpose_text"
        android:textColor="@color/button_background_color"
        android:textSize="20dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/button_background_color"
        android:textColor="@color/button_text_color"
        android:text="@string/how_its_done_button_text"
        android:id="@+id/how_its_done_button"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="41dp" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/button_background_color"
        android:textColor="@color/button_text_color"
        android:text="@string/everyday_button__text"
        android:id="@+id/everyDay_button"
        android:layout_below="@+id/how_its_done_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="41dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/button_background_color"
        android:textColor="@color/button_text_color"
        android:text="How to tract productivity?"
        android:id="@+id/transparency_button"
        android:layout_below="@+id/everyDay_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="41dp" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/button_background_color"
        android:textColor="@color/button_text_color"
        android:text="What about code management?"
        android:id="@+id/code_management_button"
        android:layout_below="@+id/transparency_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="41dp" />

</RelativeLayout>
