<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/white"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="johnsoaa.awesometeams.com.scrumify.LearnActivity">

    <ImageButton
        android:id="@+id/basicConceptsButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/basic" />

    <TextView
        android:id="@+id/basicConceptsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/button_background_color"
        android:layout_below="@id/basicConceptsButton"
        android:layout_centerHorizontal="true"
        android:text="@string/basic_concepts_text" />

    <ImageButton
        android:id="@+id/sprint_planning_button"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginLeft="10dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/basicConceptsTextView"
        android:layout_marginTop="41dp"
        android:background="@drawable/planning" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/button_background_color"
        android:layout_below="@id/sprint_planning_button"
        android:text="@string/sprint_planning"
        android:id="@+id/textView2" />

    <ImageButton
        android:id="@+id/client_meeting_button"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginRight="10dp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/basicConceptsTextView"
        android:layout_marginTop="41dp"
        android:background="@drawable/transparent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/client_meeting_text_view"
        android:textColor="@color/button_background_color"
        android:text="@string/client_meeting_button_text"
        android:layout_alignTop="@+id/textView2"
        android:layout_alignRight="@+id/client_meeting_button"
        android:layout_alignEnd="@+id/client_meeting_button" />

</RelativeLayout>
